--- a/style.css
+++ b/style.css
@@ -478,7 +478,7 @@ footer p {
         padding: 15px;
     }
      .certificate-image{
-        max-width: 70%%;
+        max-width: 70%;
     }
     .contact-info .text{
         display: none;
